--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Adventurers DAO</title>
+    <script src="https://kit.fontawesome.com/3831662a9a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
