--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adventurers DAO</title>
-    <script src="https://kit.fontawesome.com/3831662a9a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3831662a9a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
